--- a/custom-theme/main.html
+++ b/custom-theme/main.html
@@ -28,7 +28,7 @@
 			<script>hljs.initHighlightingOnLoad();</script>
         {%- endif %}
     {%- endblock %}
-     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8415048556078691" crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8415048556078691" crossorigin="anonymous"></script>
   </head>
   <body id="body">
     {% include 'partials/navbar.html' %}
@@ -48,7 +48,19 @@
             <div id="mkdocs-search-results"></div>
           </div>
           <div class="column">
-
+          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8415048556078691"
+          crossorigin="anonymous"></script>
+          <!-- Documentation Sidebar -->
+          <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-8415048556078691"
+            data-ad-slot="4403497135"
+            data-ad-format="auto"
+            data-adtest="on"
+            data-full-width-responsive="true"></ins>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
           </div>
         </div>
       </div>
