--- a/custom-theme/main.html
+++ b/custom-theme/main.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page.title }} - {{ config.site_name }}</title>
+    <meta property="og:title" content="minedocs Guide - {{ page.title }}" />
     <link rel="stylesheet" href="{{ '/assets/css/bulma.min.css'|url }}">
     <link rel="stylesheet" href="/node_modules/bulma-quickview/dist/css/bulma-quickview.min.css">
     <link rel="stylesheet" href="{{ '/css/theme.css'|url }}">
@@ -73,6 +74,14 @@
                     </div>
                     <div id="mkdocs-search-results"></div>
                 </div>
+            </div>
+            <hr />
+            <div class="container">
+                <script src="https://giscus.app/client.js" data-repo="11mods/minedocs" data-repo-id="R_kgDOIR2vxA"
+                    data-category="Guides" data-category-id="DIC_kwDOIR2vxM4CSJoX" data-mapping="og:title"
+                    data-strict="1" data-reactions-enabled="1" data-emit-metadata="0" data-input-position="top"
+                    data-theme="transparent_dark" data-lang="en" data-loading="lazy" crossorigin="anonymous" async>
+                    </script>
             </div>
         </div>
     </section>
