--- a/custom-theme/main.html
+++ b/custom-theme/main.html
@@ -10,6 +10,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <meta property="og:type" content="website">
 
     <!-- OG Tags -->
     {% if not page.meta.is_root %}
@@ -17,11 +18,10 @@
         <meta property="og:title" content="{{ page.title }}" />
         <meta property="og:description" content="{{ page.description }}"/>
     {% else %}
-
-    <title>minedocs</title>
-    <meta property="og:title" content="minedocs" />
-    <meta property="og:description" content="Community curated guides, and documentation plus wikis for mineblock11's mods."/>
-    <meta property="og:image" content="https://mineblock11.dev/mb11.png" />
+        <title>minedocs</title>
+        <meta property="og:title" content="minedocs" />
+        <meta property="og:description" content="Community curated guides, and documentation plus wikis for mineblock11's mods."/>
+        <meta property="og:image" content="https://mineblock11.dev/mb11.png" />
     {% endif %}
 
     <!-- CSS/JS -->
