--- a/custom-theme/main.html
+++ b/custom-theme/main.html
@@ -21,7 +21,7 @@
         <title>minedocs</title>
         <meta property="og:title" content="minedocs" />
         <meta property="og:description" content="Community curated guides, and documentation plus wikis for mineblock11's mods."/>
-        <meta property="og:image" content="https://mineblock11.dev/mb11.png" />
+        <meta property="og:image" content="https://github.com/mineblock11.png" />
     {% endif %}
 
     <!-- CSS/JS -->
