--- a/custom-theme/main.html
+++ b/custom-theme/main.html
@@ -124,7 +124,7 @@
     {% else %}
 
         <section class="section">
-            <div class="container is-fluid">
+            <div class="container is-max-desktop">
                 <div class="columns is-desktop">
                     {% if not page.meta.hide_toc %}
                     <div class="column is-one-quarter">
